--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "type": "module",
   "dependencies": {
     "amazon-cognito-identity-js": "^6.3.7",
+    "aws-sdk": "^2.1569.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
